--- a/package.json
+++ b/package.json
@@ -12,32 +12,44 @@
     "check": "run-s lint test",
     "test-src": "cross-env BABEL_ENV=cjs babel-node test/index.js | tap-spec",
     "check:bundlesize": "cross-env BABEL_ENV=es ./node_modules/.bin/bundlesize",
-    "clean": "rimraf dist es lib",
-    "build:umd:dev": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -i src/index.js -o dist/redux-saga.js",
-    "build:umd:prod": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -i src/index.js -o dist/redux-saga.min.js",
+    "clean": "yarn && rimraf dist es lib",
+    "build:umd:dev":
+      "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -i src/index.js -o dist/redux-saga.js",
+    "build:umd:prod":
+      "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -i src/index.js -o dist/redux-saga.min.js",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
     "build": "npm run clean && run-p build:**",
     "counter": "cross-env BABEL_ENV=cjs node examples/counter/server.js",
-    "cancellable-counter": "cross-env BABEL_ENV=cjs node examples/cancellable-counter/server.js",
-    "test-counter": "cross-env BABEL_ENV=cjs babel-node examples/counter/test/sagas.js | tap-spec",
+    "cancellable-counter":
+      "cross-env BABEL_ENV=cjs node examples/cancellable-counter/server.js",
+    "test-counter":
+      "cross-env BABEL_ENV=cjs babel-node examples/counter/test/sagas.js | tap-spec",
     "shop": "cross-env BABEL_ENV=cjs node examples/shopping-cart/server.js",
-    "test-shop": "cross-env BABEL_ENV=cjs babel-node examples/shopping-cart/test/sagas.js | tap-spec",
+    "test-shop":
+      "cross-env BABEL_ENV=cjs babel-node examples/shopping-cart/test/sagas.js | tap-spec",
     "async": "cross-env BABEL_ENV=cjs node examples/async/server.js",
-    "test-async": "cross-env BABEL_ENV=cjs babel-node examples/async/test/sagas.js | tap-spec",
-    "real-world": "npm --prefix examples/real-world install examples/real-world && cross-env BABEL_ENV=cjs node --require babel-register examples/real-world/server.js",
+    "test-async":
+      "cross-env BABEL_ENV=cjs babel-node examples/async/test/sagas.js | tap-spec",
+    "real-world":
+      "npm --prefix examples/real-world install examples/real-world && cross-env BABEL_ENV=cjs node --require babel-register examples/real-world/server.js",
     "docs:clean": "rimraf _book",
     "docs:prepare": "gitbook install",
-    "docs:build": "npm run docs:prepare && gitbook build -g redux-saga/redux-saga",
+    "docs:build":
+      "npm run docs:prepare && gitbook build -g redux-saga/redux-saga",
     "docs:watch": "npm run docs:prepare && gitbook serve",
-    "docs:publish": "npm run docs:clean && npm run docs:build && cp CNAME _book && cd _book && git init && git commit --allow-empty -m 'update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update book' && git push git@github.com:redux-saga/redux-saga gh-pages --force",
+    "docs:publish":
+      "npm run docs:clean && npm run docs:build && cp CNAME _book && cd _book && git init && git commit --allow-empty -m 'update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update book' && git push git@github.com:redux-saga/redux-saga gh-pages --force",
     "precommit": "lint-staged && run-p build:umd:** && git add dist",
     "prepare": "npm run build",
     "prepush": "npm run check",
     "prerelease": "npm run check && npm run prepare",
-    "release:patch": "npm run prerelease && npm version patch && git push --follow-tags && npm publish",
-    "release:minor": "npm run prerelease && npm version minor && git push --follow-tags && npm publish",
-    "release:major": "npm run prerelease && npm version major && git push --follow-tags && npm publish"
+    "release:patch":
+      "npm run prerelease && npm version patch && git push --follow-tags && npm publish",
+    "release:minor":
+      "npm run prerelease && npm version minor && git push --follow-tags && npm publish",
+    "release:major":
+      "npm run prerelease && npm version major && git push --follow-tags && npm publish"
   },
   "repository": {
     "type": "git",
@@ -111,9 +123,7 @@
   "npmFileMap": [
     {
       "basePath": "/dist/",
-      "files": [
-        "*.js"
-      ]
+      "files": ["*.js"]
     }
   ]
 }
